fixed horizontal scroll on grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C26758

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -1922,8 +1922,7 @@ opacity:0.9 ;
     overflow-x: auto;
     margin: 0px -15px;
 }
-.big-data-grid .container{   
-    padding: 15px;
+.big-data-grid .container{       
     width:100%  !important;
 }
 
